# cw

./: .gitignore  AGENTS.md  CW.py  Feishu_Finance_Assistant.spec  README.md  README_小白版.md  V1.2优化总结.md  V1.2详细实施计划.md  V1.3全能版总结.md  V1.4增强版_使用说明.txt  V1.4立即优化方案.md  V1.5_完成总结.md  V1.5_快速参考.txt  V1.5_最新进度总结.md  V1.5实战版_使用说明.txt  V1.5实战版_最终交付.md  ai_category_cache.json  build_exe.bat  complete_oxidation_factory_demo_data.json  create_demo_data.py  create_oxidation_demo_data.py  create_test_data_direct.py  generate_complete_demo.py  pyproject.toml  requirements.txt  run_accrual_property_tests.py  run_finance.py  run_simulation.py  sim_log.txt  start_web.sh  subject_mapping.json  system_validation_test.py  test_accrual_properties_direct.py  test_logic.py  test_optimized_app.py  test_order_management.py  test_oxidation_config.py  test_report_task_7_1.py  test_result.txt  test_runner_temp.py  (+57 more)
2_已处理归档/: 测试数据_别名导入模板.xlsx  测试数据_银行流水.xlsx
collection_letters_demo/: 催款函_优质客户有限公司_二次催收_20260210_123120.docx  催款函_优质客户有限公司_二次催收_20260210_184449.docx  催款函_优质客户有限公司_最后通知_20260210_123120.docx  催款函_优质客户有限公司_最后通知_20260210_184449.docx  催款函_优质客户有限公司_首次提醒_20260210_123120.docx  催款函_优质客户有限公司_首次提醒_20260210_184448.docx  催款函_优质客户有限公司_首次提醒_20260210_184449.docx  催款函_新兴科技股份有限公司_最后通知_20260210_123120.docx  催款函_新兴科技股份有限公司_最后通知_20260210_123121.docx  催款函_新兴科技股份有限公司_最后通知_20260210_184448.docx  催款函_新兴科技股份有限公司_最后通知_20260210_184449.docx  催款函_长期合作伙伴公司_二次催收_20260210_123120.docx  催款函_长期合作伙伴公司_二次催收_20260210_123121.docx  催款函_长期合作伙伴公司_二次催收_20260210_184448.docx  催款函_长期合作伙伴公司_二次催收_20260210_184449.docx
demo_data/: counterparties.json  reminders.json  transactions.json
demo_data_v20/: oxidation_factory_demo_data.json
deprecated_versions/: README.md
docs/: README.md  落地使用指南.md
oxidation_complete_v17/: PROGRESS_SUMMARY.md  README.md  TASK_1_SUMMARY.md  TASK_2_SUMMARY.md  TASK_3_SUMMARY.md  TASK_4.1_SUMMARY.md  TASK_4_SUMMARY.md  TASK_5.1_SUMMARY.md  TASK_5.2_SUMMARY.md  TASK_6.1_SUMMARY.md  TASK_6.2_SUMMARY.md  TASK_7.1_SUMMARY.md  __init__.py  oxidation_config.json  pytest.ini
oxidation_factory/: __init__.py  config.py  local_storage.py  order_manager.py  order_wizard.py  table_init.py
oxidation_finance_v20/: PROJECT_STRUCTURE.md  README.md  TASK_1_SUMMARY.md  TASK_2.1_SUMMARY.md  TASK_2.4_COMPLETION_REPORT.md  TASK_5.1_COMPLETION_SUMMARY.md  TASK_5.2_COMPLETION_SUMMARY.md  TASK_5.3_COMPLETION_SUMMARY.md  TASK_5.4_COMPLETION_SUMMARY.md  TASK_7.4_COMPLETION_SUMMARY.md  TASK_7.5_COMPLETION_SUMMARY.md  TASK_8.1_COMPLETION_SUMMARY.md  TASK_8.3_COMPLETION_SUMMARY.md  __init__.py  check_tests.py  full_feature_test.py  oxidation_finance_demo.db  oxidation_finance_demo_ready.db  pytest.ini  quick_hypothesis_test.py  quick_test.py  requirements.txt  run_accrual_tests.py  run_all.ps1  run_all.sh  run_audit_property_tests.py  run_audit_tests.py  run_backup_quick_test.py  run_backup_tests.py  run_bank_property_tests.py  run_business_analysis_property_tests.py  run_config_tests.py  (+34 more)
(+586 files in other folders)
